feat: rename server in jar folder

--- a/roles/minecraft/templates/minecraft.service.j2
+++ b/roles/minecraft/templates/minecraft.service.j2
@@ -12,7 +12,7 @@ WorkingDirectory={{ minecraft_base_directory }}
 StandardInput=socket
 StandardOutput=journal
 StandardError=journal
-ExecStart=/usr/bin/java -Xms{{ minecraft_java_xms }} -Xmx{{ minecraft_java_xmx }} -jar server/current/server.jar nogui
+ExecStart=/usr/bin/java -Xms{{ minecraft_java_xms }} -Xmx{{ minecraft_java_xmx }} -jar jar/current/server.jar nogui
 ExecStop=/bin/sh -c "echo 'save-all' > {{ minecraft_console_fifo }}"
 ExecStop=/bin/sh -c "echo 'stop' > {{ minecraft_console_fifo }}"
 Restart=on-failure
