feat: add server.properties ansible variables

--- a/roles/minecraft/templates/server.properties.j2
+++ b/roles/minecraft/templates/server.properties.j2
@@ -1,62 +1,62 @@
 #Minecraft server properties
-accepts-transfers=false
-allow-flight=false
-allow-nether=true
-broadcast-console-to-ops=true
-broadcast-rcon-to-ops=true
-bug-report-link=
-difficulty=easy
-enable-command-block=false
-enable-jmx-monitoring=false
-enable-query=false
-enable-rcon=false
-enable-status=true
-enforce-secure-profile=true
-enforce-whitelist=false
-entity-broadcast-range-percentage=100
-force-gamemode=false
-function-permission-level=2
-gamemode=survival
-generate-structures=true
-generator-settings={}
-hardcore=false
-hide-online-players=false
-initial-disabled-packs=
-initial-enabled-packs=vanilla
-level-name=world
-level-seed=
-level-type=minecraft\:normal
-log-ips=true
-max-chained-neighbor-updates=1000000
-max-players=20
-max-tick-time=60000
-max-world-size=29999984
-motd=A Minecraft Server
-network-compression-threshold=256
-online-mode=true
-op-permission-level=4
-pause-when-empty-seconds=60
-player-idle-timeout=0
-prevent-proxy-connections=false
-pvp=true
-query.port=25565
-rate-limit=0
-rcon.password=
-rcon.port=25575
-region-file-compression=deflate
-require-resource-pack=false
-resource-pack=
-resource-pack-id=
-resource-pack-prompt=
-resource-pack-sha1=
-server-ip=
-server-port=25565
-simulation-distance=10
-spawn-monsters=true
-spawn-protection=16
-sync-chunk-writes=true
-text-filtering-config=
-text-filtering-version=0
-use-native-transport=true
-view-distance=10
-white-list=false
+accepts-transfers={{ minecraft_accepts_transfers | lower }}
+allow-flight={{ minecraft_allow_flight | lower }}
+allow-nether={{ minecraft_allow_nether | lower }}
+broadcast-console-to-ops={{ minecraft_broadcast_console_to_ops | lower }}
+broadcast-rcon-to-ops={{ minecraft_broadcast_rcon_to_ops | lower }}
+bug-report-link={{ minecraft_bug_report_link }}
+difficulty={{ minecraft_difficulty }}
+enable-command-block={{ minecraft_enable_command_block | lower }}
+enable-jmx-monitoring={{ minecraft_enable_jmx_monitoring | lower }}
+enable-query={{ minecraft_enable_query | lower }}
+enable-rcon={{ minecraft_enable_rcon | lower }}
+enable-status={{ minecraft_enable_status | lower }}
+enforce-secure-profile={{ minecraft_enforce_secure_profile | lower }}
+enforce-whitelist={{ minecraft_enforce_whitelist | lower }}
+entity-broadcast-range-percentage={{ minecraft_entity_broadcast_range_percentage }}
+force-gamemode={{ minecraft_force_gamemode | lower }}
+function-permission-level={{ minecraft_function_permission_level }}
+gamemode={{ minecraft_gamemode }}
+generate-structures={{ minecraft_generate_structures | lower }}
+generator-settings={{ minecraft_generator_settings }}
+hardcore={{ minecraft_hardcore | lower }}
+hide-online-players={{ minecraft_hide_online_players | lower }}
+initial-disabled-packs={{ minecraft_initial_disabled_packs }}
+initial-enabled-packs={{ minecraft_initial_enabled_packs }}
+level-name={{ minecraft_level_name }}
+level-seed={{ minecraft_level_seed }}
+level-type={{ minecraft_level_type }}
+log-ips={{ minecraft_log_ips | lower }}
+max-chained-neighbor-updates={{ minecraft_max_chained_neighbor_updates }}
+max-players={{ minecraft_max_players }}
+max-tick-time={{ minecraft_max_tick_time }}
+max-world-size={{ minecraft_max_world_size }}
+motd={{ minecraft_motd }}
+network-compression-threshold={{ minecraft_network_compression_threshold }}
+online-mode={{ minecraft_online_mode | lower }}
+op-permission-level={{ minecraft_op_permission_level }}
+pause-when-empty-seconds={{ minecraft_pause_when_empty_seconds }}
+player-idle-timeout={{ minecraft_player_idle_timeout }}
+prevent-proxy-connections={{ minecraft_prevent_proxy_connections | lower }}
+pvp={{ minecraft_pvp | lower }}
+query.port={{ minecraft_query_port }}
+rate-limit={{ minecraft_rate_limit }}
+rcon.password={{ minecraft_rcon_password }}
+rcon.port={{ minecraft_rcon_port }}
+region-file-compression={{ minecraft_region_file_compression }}
+require-resource-pack={{ minecraft_require_resource_pack | lower }}
+resource-pack={{ minecraft_resource_pack }}
+resource-pack-id={{ minecraft_resource_pack_id }}
+resource-pack-prompt={{ minecraft_resource_pack_prompt }}
+resource-pack-sha1={{ minecraft_resource_pack_sha1 }}
+server-ip={{ minecraft_server_ip }}
+server-port={{ minecraft_server_port }}
+simulation-distance={{ minecraft_simulation_distance }}
+spawn-monsters={{ minecraft_spawn_monsters | lower }}
+spawn-protection={{ minecraft_spawn_protection }}
+sync-chunk-writes={{ minecraft_sync_chunk_writes | lower }}
+text-filtering-config={{ minecraft_text_filtering_config }}
+text-filtering-version={{ minecraft_text_filtering_version }}
+use-native-transport={{ minecraft_use_native_transport | lower }}
+view-distance={{ minecraft_view_distance }}
+white-list={{ minecraft_white_list | lower }}
